--- a/templates/control-panel.html
+++ b/templates/control-panel.html
@@ -138,10 +138,10 @@
         <form style="padding: 1em;" method="post" enctype="multipart/form-data">
             <div style="margin-bottom: 1em;">
                 <div class="row">
-                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="favicon">Favicon (you can leave empty; must be .png)</label></div>
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="favicon">Favicon (you can leave empty)</label></div>
                 </div>
                 <div class="row">
-                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="file" id="favicon" name="favicon"></div>
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="file" id="favicon" name="favicon" accept=".png, .jpg, .jpeg"></div>
                 </div>
             </div>
             <div style="margin-bottom: 1em;">
